--- a/inference notebook.ipynb
+++ b/inference notebook.ipynb
@@ -791,7 +791,7 @@
     "  port = 465\n",
     "  smtp_server = 'smtp.gmail.com'\n",
     "\n",
-    "  sender_email = 'ugaledatta41@gmail.com'\n",
+    "  sender_email = 'ajeetXXXXXXX@gmail.com'\n",
     "\n",
     "  # receiver_email =\n",
     "\n",
